<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_user_profile"
            android:title="@string/user_profile" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/ic_create_restaurante"
            android:iconTint="@color/black"
            android:title="@string/restaurant_profile" />
        <item
            android:id="@+id/nav_mesas"
            android:icon="@drawable/ic_table"
            android:iconTint="@color/black"
            android:title="@string/listado_de_mesas" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/men_del_restaurante" />
    </group>
    <group android:id="@+id/cerrar_sesion"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_logout"
            android:title="@string/cerrar_sesi_n"/>
    </group>
</menu>