<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/lbl_codigo_mesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduce_el_c_digo_de_la_mesa"
            android:textSize="24sp"
            android:layout_marginBottom="6dp"/>
        <EditText
            android:id="@+id/txt_codigo_mesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_digo_de_la_mesa"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/bnt_ocupar_mesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocupar_mesa"/>
    </LinearLayout>
</RelativeLayout>