<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_de_la_aplicaci_n"
        android:src="@drawable/logo_easy_order"/>
    <TextView
        android:id="@+id/lbl_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_below="@id/logo"/>
    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lbl_id"
        android:layout_alignBaseline="@id/lbl_id"
        android:textSize="20sp"
        tools:text="Número ID"/>

    <TextView
        android:id="@+id/lbl_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_below="@id/txt_id"/>
    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lbl_nombre"
        android:layout_alignBaseline="@id/lbl_nombre"
        android:textSize="20sp"
        tools:text="Nombre y apellidos del usuario"/>

    <TextView
        android:id="@+id/lbl_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_below="@id/txt_nombre"/>
    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lbl_email"
        android:layout_alignBaseline="@id/lbl_email"
        android:textSize="20sp"
        tools:text="Email"/>

    <TextView
        android:id="@+id/lbl_tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_below="@id/txt_email"/>
    <TextView
        android:id="@+id/txt_tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lbl_tipo"
        android:layout_alignBaseline="@id/lbl_tipo"
        android:textSize="20sp"
        tools:text="Trabajador / Cliente"/>

    <TextView
        android:id="@+id/lbl_alergia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alergias_"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_below="@id/txt_tipo"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_alergies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_alergia"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
</RelativeLayout>