<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:contentDescription="@string/logo_de_la_aplicaci_n"
        android:src="@drawable/logo_easy_order"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nombre_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_completo"
                android:inputType="text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_below="@id/nombre_txt"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/contraseña_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:layout_below="@id/email_txt"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/repetir_contraseña_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repite_la_contrase_a"
                android:inputType="textPassword"
                android:layout_below="@id/contraseña_txt"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/registrar_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/repetir_contraseña_txt"
                android:text="@string/registrar"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>