<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.restaurant.CreateRestaurantFragment">

    <EditText
        android:id="@+id/nombre_restaurante_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_del_restaurante"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/calle_restaurante_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/calle"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombre_restaurante_txt"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/ciudad_restaurante_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ciudad"
        android:inputType="text"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/codigo_postal_txt"
        app:layout_constraintTop_toBottomOf="@id/calle_restaurante_txt"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"/>
    <EditText
        android:id="@+id/codigo_postal_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/codigo_postal"
        android:inputType="number"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/ciudad_restaurante_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calle_restaurante_txt"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="5dp"/>
    <EditText
        android:id="@+id/pais_restaurante_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pa_s"
        android:inputType="text"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/codigo_postal_txt"
        app:layout_constraintTop_toBottomOf="@id/ciudad_restaurante_txt"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/lbl_imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imagen"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/pais_restaurante_txt"
        android:layout_margin="10dp"/>
    <ImageView
        android:id="@+id/img_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/lbl_imagen"
        app:layout_constraintStart_toEndOf="@id/btn_add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:visibility="gone"
        android:layout_margin="10dp"/>
    <ImageButton
        android:id="@+id/btn_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_circle"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/lbl_imagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        app:layout_constraintTop_toBottomOf="@id/btn_add_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:backgroundTint="@android:color/darker_gray"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
    <Button
        android:id="@+id/btn_crear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crear"
        app:layout_constraintTop_toBottomOf="@id/btn_add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>