<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_de_la_aplicaci_n"
        android:src="@drawable/logo_easy_order"/>
    <TextView
        android:id="@+id/lbl_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_below="@id/img_restaurant"/>
    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lbl_id"
        android:layout_alignBaseline="@id/lbl_id"
        android:layout_toStartOf="@id/btn_copy"
        android:textSize="16sp"
        tools:text="Número ID"/>
    <ImageButton
        android:id="@+id/btn_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_copy"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/img_restaurant"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/lbl_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_below="@id/txt_id"/>
    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lbl_nombre"
        android:layout_alignBaseline="@id/lbl_nombre"
        android:textSize="16sp"
        tools:text="Nombre y apellidos del usuario"/>

    <TextView
        android:id="@+id/lbl_calle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calle_"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_below="@id/txt_nombre"/>
    <TextView
        android:id="@+id/txt_calle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lbl_calle"
        android:layout_alignBaseline="@id/lbl_calle"
        android:textSize="16sp"
        tools:text="Calle"/>

    <TextView
        android:id="@+id/lbl_ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad_"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_below="@id/txt_calle"/>
    <TextView
        android:id="@+id/txt_ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lbl_ciudad"
        android:layout_alignBaseline="@id/lbl_ciudad"
        android:textSize="16sp"
        tools:text="Ciudad"/>

    <TextView
        android:id="@+id/lbl_codigo_postal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigo_postal_"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_below="@id/txt_ciudad"/>
    <TextView
        android:id="@+id/txt_codigo_postal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lbl_codigo_postal"
        android:layout_alignBaseline="@id/lbl_codigo_postal"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        tools:text="Codigo postal"/>
    <TextView
        android:id="@+id/lbl_pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pais_"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_below="@id/txt_codigo_postal"/>
    <TextView
        android:id="@+id/txt_pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lbl_pais"
        android:layout_alignBaseline="@id/lbl_pais"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        tools:text="Pais"/>
</RelativeLayout>